--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -70,6 +70,12 @@ nav .btn {
     border-radius: 2px;
 }
 
+
+.dropdown-item.active, .dropdown-item:active {
+    color: #fff;
+    text-decoration: none;
+    background-color: #07834e;
+}
 .navbar-toggler {
     border: 0;
 }
