--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -1,161 +1,177 @@
 @font-face {
-    font-family: 'Soleil';
-    src: url('~assets/fonts/soleil-regular-webfont.woff') format('woff');
-    font-style: normal;
-    font-weight: normal;
+  font-family: 'Soleil';
+  src: url('~assets/fonts/Soleil-Light.woff') format('woff');
+  font-style: lighter;
+  font-weight: 100;
 }
 @font-face {
-    font-family: 'Soleil';
-    src: url('~assets/fonts/soleil-light-webfont.woff') format('woff');
-    font-style: lighter;
-    font-weight: lighter;
+  font-family: 'Soleil';
+  src: url('~assets/fonts/Soleil-Regular.woff') format('woff');
+  font-style: normal;
+  font-weight: 400;
 }
 @font-face {
-    font-family: 'Soleil';
-    src: url('~assets/fonts/soleil-bold-webfont.woff') format('woff');
-    font-style: bold;
-    font-weight: bold;
+  font-family: 'Soleil';
+  src: url('~assets/fonts/Soleil-Book.woff') format('woff');
+  font-style: bold;
+  font-weight: 600;
+}
+@font-face {
+  font-family: 'Soleil';
+  src: url('~assets/fonts/Soleil-Bold.woff') format('woff');
+  font-style: bolder;
+  font-weight: 900;
 }
 
 :root {
-    --black-text: #091F0E;
-    --gray-text: #747A76;
-    --green-color: #34996E ;
-    --orange-color: #FDA57D ;
-    --light-green-color: #26B14F;
-    --dark-green-color: #07834E;
-    --border-gray: #E7E7E7; 
-    --other-green-color: #1D8E63; 
-
+  --black-text: #091f0e;
+  --gray-text: #747a76;
+  --green-color: #34996e;
+  --orange-color: #fda57d;
+  --light-green-color: #26b14f;
+  --dark-green-color: #07834e;
+  --border-gray: #e7e7e7;
+  --other-green-color: #1d8e63;
 }
 
 h1,
-h2.h3,h4,h5,h6 {
-  
+h2.h3,
+h4,
+h5,
+h6 {
 }
 
-button, button:focus, input, input:focus, .btn:focus {
-    outline: 0 !important;
-    box-shadow: none;
+button,
+button:focus,
+input,
+input:focus,
+.btn:focus {
+  outline: 0 !important;
+  box-shadow: none;
 }
 
 body {
-    font-family: 'Soleil', sans-serif;
-    font-weight: normal;
-    color:  #747A76;
-    font-size: 14px;
+  font-family: 'Soleil', sans-serif;
+  font-weight: normal;
+  color: #747a76;
+  font-size: 16px;
+  font-weight: 100;
 }
 
-.nav li{
-    font-weight: lighter
+.nav li {
+  font-weight: lighter;
 }
 
 .nav-item {
-    margin: 0 calc(20px - 0.5rem);
-    font-size: 14px;
+  margin: 0 calc(20px - 0.5rem);
+  font-size: 16px;
 }
 
 .nav-item button {
-    font-weight: normal
+  font-weight: 400;
 }
 
 nav .btn {
-    width: 120px;
-    color: #07834E;
-    background: white;
-    height: 40px;
-    font-size: 14px;
-    padding: 0 5px;
-    border: 2px solid #FFFFFF;
-    border-radius: 2px;
+  width: 140px;
+  color: #07834e;
+  background: white;
+  height: 40px;
+  font-size: 16px;
+  padding: 0 5px;
+  border: 2px solid #ffffff;
+  border-radius: 2px;
 }
 
-
-.dropdown-item.active, .dropdown-item:active {
-    color: #fff;
-    text-decoration: none;
-    background-color: #07834e;
+.dropdown-item.active,
+.dropdown-item:active {
+  color: #fff;
+  text-decoration: none;
+  background-color: #07834e;
 }
 .navbar-toggler {
-    border: 0;
+  border: 0;
 }
 
 .white-btn {
-    width: 170px;
-    height: 52px;
-    padding: 0 5px;
-    border: none;
-    /* border: 1px solid #FFFFFF; */
-    border-radius: 2px;
-    color: #07834E;
-    background: white;
+  width: 170px;
+  height: 52px;
+  padding: 0 5px;
+  border: none;
+  /* border: 1px solid #FFFFFF; */
+  border-radius: 2px;
+  color: #07834e;
+  background: white;
 }
 .green-btn {
-    width: 170px;
-    height: 52px;
-    padding: 0 5px;
-    border: none;
-    /* border: 1px solid #FFFFFF; */
-    border-radius: 2px;
-    background: #34996E;
-    color: white;
+  width: 170px;
+  height: 52px;
+  padding: 0 5px;
+  border: none;
+  /* border: 1px solid #FFFFFF; */
+  border-radius: 2px;
+  background: #34996e;
+  color: white;
 }
 
 .orange-btn {
-    width: 170px;
-    height: 52px;
-    padding: 0 5px;
-    border: none;
-    border-radius: 2px;
-    background: var(--orange-color);
-    color: white;
+  width: 170px;
+  height: 52px;
+  padding: 0 5px;
+  border: none;
+  border-radius: 2px;
+  background: var(--orange-color);
+  color: white;
 }
 
 li {
-    list-style: none;
+  list-style: none;
 }
 
 .nuxt-link-exact-active {
-    font-weight: 600
+  font-weight: 700;
 }
 
 button {
-    transition: box-shadow 0.3s ease-in-out
+  transition: box-shadow 0.3s ease-in-out;
 }
 
 .btn:hover {
-    color: #212529;
-    text-decoration: none;
+  color: #212529;
+  text-decoration: none;
 }
 
-.green-btn:hover, .green-btn:target  {
-    box-shadow: 0 2px 0px #9e9e9e;
+.green-btn:hover,
+.green-btn:target {
+  box-shadow: 0 2px 0px #9e9e9e;
 }
 
-.white-btn:hover, .white-btn:target {
-    box-shadow: 0 2px 0px #044c2d;
+.white-btn:hover,
+.white-btn:target {
+  box-shadow: 0 2px 0px #044c2d;
 }
-.orange-btn:hover, .orange-btn:target {
-    box-shadow: 0 2px 0px #ef4c02;
+.orange-btn:hover,
+.orange-btn:target {
+  box-shadow: 0 2px 0px #ef4c02;
 }
 
 .form-control {
-    border: 1px solid #E5E5E5;
-    border-radius: 0;
-    margin-bottom: 1rem;
-    margin-top: 1rem;
-    font-size: 12px;
-    -webkit-appearance: none;
-    height: 38px;
+  border: 1px solid #e5e5e5;
+  border-radius: 0;
+  margin-bottom: 1rem;
+  margin-top: 1rem;
+  font-size: 12px;
+  -webkit-appearance: none;
+  height: 38px;
 }
 .form-control:focus,
 .form-control:target {
-    border: 1px solid #168A59; 
-    box-shadow: none;
-    outline: 0
+  border: 1px solid #168a59;
+  box-shadow: none;
+  outline: 0;
 }
 
-@media (min-width: 1200px){
-.container {
-    /* max-width: 1440px; */
-}}
+@media (min-width: 1200px) {
+  .container {
+    max-width: 1260px;
+  }
+}
