--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -130,6 +130,18 @@ li {
 
 .nuxt-link-exact-active {
   font-weight: 700;
+  position: relative;
+}
+
+li .nuxt-link-exact-active::after {
+  content: '';
+  bottom: 6px;
+  left: 50%;
+  position: absolute;
+  width: 5px;
+  height: 5px;
+  background: white;
+  border-radius: 50%;
 }
 
 button {
@@ -141,18 +153,22 @@ button {
   text-decoration: none;
 }
 
+button:disabled {
+  opacity: 0.6;
+}
+
 .green-btn:hover,
 .green-btn:target {
-  box-shadow: 0 2px 0px #9e9e9e;
+  /* box-shadow: 0 2px 0px #9e9e9e; */
 }
 
 .white-btn:hover,
 .white-btn:target {
-  box-shadow: 0 2px 0px #044c2d;
+  /* box-shadow: 0 2px 0px #044c2d; */
 }
 .orange-btn:hover,
 .orange-btn:target {
-  box-shadow: 0 2px 0px #ef4c02;
+  /* box-shadow: 0 2px 0px #ef4c02; */
 }
 
 .form-control {
@@ -160,7 +176,7 @@ button {
   border-radius: 0;
   margin-bottom: 1rem;
   margin-top: 1rem;
-  font-size: 12px;
+  font-size: 14px;
   -webkit-appearance: none;
   height: 38px;
   font-weight: 100;
@@ -170,12 +186,77 @@ button {
 textarea:focus,
 textarea:target {
   border: 1px solid #168a59 !important;
-  box-shadow: none  !important;
-  outline: 0  !important;
+  box-shadow: none !important;
+  outline: 0 !important;
 }
 
 select {
   font-weight: 100;
+}
+
+label.invalid {
+  color: #ee4949 !important;
+  opacity: 1;
+}
+
+input.invalid,
+select.invalid {
+  border: solid 1px #ee4949 !important;
+}
+
+p.invalid {
+  color: #ee4949;
+  font-size: 10px !important;
+  margin-top: 5px;
+  margin-bottom: 0px;
+  /* padding-bottom: 5px; */
+  /* position: absolute; */
+}
+
+/* user profile */
+div.dropdown {
+  width: 170px;
+  background: #ffffff;
+  box-shadow: 0px 1px 10px rgba(0, 0, 0, 0.16);
+  border-radius: 2px;
+}
+
+div.dropdown-menu {
+  border: none;
+  margin-top: 10px;
+}
+
+.navbar-light .nav-item a.dropdown-item {
+  color: black !important;
+  font-size: 16px;
+  font-weight: 100;
+}
+
+.avatar {
+  border-radius: 2px 0 0 2px;
+}
+
+.user-name {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  width: 95px;
+  color: black;
+}
+
+/* toast */
+
+.toasted-container .toasted {
+  border-radius: 2px !important;
+}
+
+.toasted.toasted-primary.success {
+  border-left: 2px solid #47d664;
+  background: white;
+}
+.toasted.toasted-primary.error {
+  border-left: 2px solid #ee3934;
+  background: white;
 }
 
 @media (min-width: 1200px) {
