Fetched federal rooms and implemented change topic

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -234,6 +234,9 @@ div.dropdown-menu {
 
 .avatar {
   border-radius: 2px 0 0 2px;
+  object-fit: cover;
+  width: 38px;
+  height: 38px;
 }
 
 .user-name {
