--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -204,7 +204,8 @@ label.invalid {
 }
 
 input.invalid,
-select.invalid {
+select.invalid,
+textarea.invalid {
   border: solid 1px #ee4949 !important;
 }
 
